right text on mobile: fix header

--- a/app/assets/stylesheets/pageflow/themes/_base.scss
+++ b/app/assets/stylesheets/pageflow/themes/_base.scss
@@ -88,6 +88,10 @@ section.delayed_text_fade_in_short {
   .page p {
       max-width: 65%;
   }
+  .text_position_right.page h2 {
+    max-width: 65%;
+    margin-left: auto;
+  }
 }
 
 .js {
